--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -3,9 +3,7 @@ name: Generate pacman animation
 on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
-
   workflow_dispatch:
-
   push:
     branches:
     - main
@@ -18,11 +16,17 @@ jobs:
     timeout-minutes: 5
 
     steps:
+      - name: Create dist directory
+        run: mkdir -p dist
+
       - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Move file to dist
+        run: mv pacman-contribution-graph.svg dist/
 
       - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
